--- a/composer.json
+++ b/composer.json
@@ -13,20 +13,19 @@
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
-        "guzzlehttp/guzzle": "^6.3",
-        "laravel/dusk": "^5.9",
-        "laravel/framework": "^7.0",
+        "guzzlehttp/guzzle": "^7.0.1",
+        "laravel/framework": "^8.0",
+        "laravel/passport": "^10.4",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0",
-        "yajra/laravel-datatables-oracle": "^9.9",
-        "laravel/passport": "^8.4"
+        "laravel/ui": "^3.0",
+        "yajra/laravel-datatables-oracle": "^9.9"
     },
     "require-dev": {
-        "facade/ignition": "^2.0",
+        "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.0"
     },
     "config": {
         "optimize-autoloader": true,
