--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,12 @@
         "yajra/laravel-datatables-oracle": "^9.9"
     },
     "require-dev": {
-        "spatie/laravel-ignition": "1.0",
         "fzaninotto/faker": "^1.9.1",
+        "jn-jairo/laravel-ngrok": "^2.0",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^9.0",
+        "spatie/laravel-ignition": "1.0"
     },
     "config": {
         "optimize-autoloader": true,
